--- a/environment.conf
+++ b/environment.conf
@@ -1,2 +1,2 @@
 modulepath     = modules:site:$basemodulepath
-config_version = 'files/config_version.sh $environmentpath $environment'
+config_version = 'scripts/config_version.sh $environmentpath $environment'
